Fix bug on olap display, when querying high-latency cubes

--- a/frontend/src/components/pages/project-reporting-olap/olap.html
+++ b/frontend/src/components/pages/project-reporting-olap/olap.html
@@ -32,8 +32,11 @@
 </div>
 
 <olap-grid
+	ng-if="!$ctrl.errorMessage"
 	project="$ctrl.project"
 	indicator="$ctrl.indicator"
 	dimensions="$ctrl.dimensions"
 	filter="$ctrl.filter"
 	data="$ctrl.data"></olap-grid>
+
+<span ng-if="$ctrl.errorMessage">{{$ctrl.errorMessage|translate}}</span>
