Logframe edition form was not named correctly

--- a/frontend/src/components/pages/project-structure-logical-frame/logframe-edit.html
+++ b/frontend/src/components/pages/project-structure-logical-frame/logframe-edit.html
@@ -11,7 +11,7 @@
 
 <div class="alert alert-info" translate="project.logical_frame_list_info"></div>
 
-<form class="form-horizontal noprint" role="form" name="lfForm" novalidate>
+<form class="form-horizontal noprint" role="form" name="$ctrl.lfForm" novalidate>
 
 	<!-- [General information] -->
 	<fieldset>
