--- a/frontend/src/components/pages/admin-theme/theme-edition.html
+++ b/frontend/src/components/pages/admin-theme/theme-edition.html
@@ -19,24 +19,11 @@
 			</label>
 
 			<div class="col-sm-10">
-				<div class="input-group">
-					<span class="input-group-btn">
-						<button class="btn btn-default" ng-click="$ctrl.autofill(language_code)">
-							<i class="fa fa-language"></i>
-						</button>
-					</span>
-
-					<input id="input-name-{{language_code}}"
-						   type="text"
-						   class="form-control"
-						   name="name_{{language_code}}"
-						   ng-model="$ctrl.theme.name[language_code]"
-						   placeholder="{{'theme.name_placeholder_' + language_code|translate}}"
-						   required />
-				</div>
+				<input id="input-name-{{language_code}}" type="text" class="form-control" name="name_{{language_code}}"
+					ng-model="$ctrl.theme.name[language_code]"
+					placeholder="{{'theme.name_placeholder_' + language_code|translate}}" required />
 			</div>
 		</div>
-
 	</form>
 </div>
 
