--- a/frontend/src/components/pages/admin-cc-indicator/cc-indicator-list.html
+++ b/frontend/src/components/pages/admin-cc-indicator/cc-indicator-list.html
@@ -1,4 +1,3 @@
-
 <ol class="breadcrumb">
 	<li><a ui-sref="main.admin.users" translate="shared.settings"></a></li>
 	<li class="active" translate="indicator.cross_cutting"></li>
@@ -6,33 +5,33 @@
 
 <div class="alert alert-info" translate="indicator.list_info"></div>
 
-
-
-<div class="project-content-inner" style="text-align: center">
-	<span ng-repeat="theme in $ctrl.themes|orderBy:('name.' + $root.language)" ng-class="theme.class">
-		<i class="fa fa-circle fa-fw"></i>{{theme.name[$root.language]}}&nbsp;&nbsp;
-	</span>
-</div>
-
-
 <div>
-	<div class="panel panel-default columns-panel" ng-repeat="indicator in $ctrl.indicators|orderBy:('name.' + $root.language)">
+	<div class="panel panel-default columns-panel"
+		ng-repeat="indicator in $ctrl.indicators|orderBy:('name.' + $root.language)">
 		<div class="panel-heading">
-			<div class="panel-title" title="{{indicator.name[$root.language]}}">{{indicator.name[$root.language]|maxLength:90}}</div>
+			<div class="panel-title" title="{{indicator.name[$root.language]}}">
+				{{indicator.name[$root.language]|maxLength:90}}</div>
 		</div>
 		<div class="panel-body">
-			<i class="fa fa-circle"
-				title="{{theme.name[$root.language]}}"
-			   style="margin-right: 3px"
-			   ng-repeat="theme in indicator.themes|getObjects:$ctrl.themes|orderBy:('name.' + $root.language)"
-			   ng-class="theme.class"></i>
+			<div>
+				<strong translate="theme.themes"></strong>
+				<span
+					ng-repeat="theme in indicator.themes|getObjects:$ctrl.themes|orderBy:('shortName.' + $root.language)"
+					title="{{theme.name[$root.language]}}">
+					{{theme.shortName[$root.language]}}
+				</span>
+			</div>
 
-			<div ng-if="indicator.description[$root.language]">{{indicator.description[$root.language]|maxLength:200}}</div>
-			<div ng-if="!indicator.description[$root.language]" translate="indicator.missing_description"></div>
+			<div>
+				<strong translate="shared.description"></strong>
+				<span
+					ng-if="indicator.description[$root.language]">{{indicator.description[$root.language]|maxLength:200}}
+				</span>
+				<span ng-if="!indicator.description[$root.language]" translate="indicator.missing_description"></span>
+			</div>
 
 			<div class="panel-buttons btn-group">
-				<a	ng-click="$ctrl.onEditClicked(indicator)"
-					class="btn btn-xxs btn-default"
+				<a ng-click="$ctrl.onEditClicked(indicator)" class="btn btn-xxs btn-default"
 					translate="shared.edit"></a>
 
 				<div class="btn-group" uib-dropdown>
@@ -59,6 +58,6 @@
 	<span translate="indicator.create_new"></span>
 </a>
 
-<br/>
-<br/>
-<br/>
+<br />
+<br />
+<br />
